# cpp-task_flow

./: .clang-format  .editorconfig  .env  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.py  docker-compose.yml
db/migrations/: 001_init.sql
scripts/: apply_migrations.sh  build_debug.sh  check_services.sh  conan_install_debug.sh  dev_build.sh  dev_integration_test.sh  run_api.sh  run_app.sh  run_cached_integration_tests.sh  run_integration_tests.sh  run_redis_integration_tests.sh  run_tests.sh  start_services.sh  stop_services.sh
src/: CMakeLists.txt
src/api/: http_server.cpp  http_server.h
src/app/: main.cpp
src/application/: create_task.cpp  create_task.h  get_task_by_id.cpp  get_task_by_id.h
src/domain/: task.cpp  task.h
src/infra/: cached_task_repository.cpp  cached_task_repository.h  i_task_repository.h  memory_task_repository.cpp  memory_task_repository.h  postgres_settings.h  postgres_task_repository.cpp  postgres_task_repository.h  redis_settings.h  redis_task_cache.cpp  redis_task_cache.h  thread_pool.cpp  thread_pool.h
tests/: CMakeLists.txt
tests/integration/: cached_task_repository_tests.cpp  postgres_task_repository_test.cpp  redis_task_cache_test.cpp
tests/unit/: create_task_test.cpp  get_task_by_id_test.cpp  sample_test.cpp  task_test.cpp
